feat(project): redis, mail, validation for peoject